--- a/app/view/assets/desktop_navbar.css
+++ b/app/view/assets/desktop_navbar.css
@@ -22,6 +22,7 @@
 
 	margin-right: 16px;
 
+	max-width: 110px;
 	/* width: 160px; */
 }
 #desktop-navbar-icons > button {
